--- a/hadoop/config/jobs/base.properties
+++ b/hadoop/config/jobs/base.properties
@@ -41,6 +41,7 @@ hadoop-conf.mapreduce.input.fileinputformat.split.maxsize=100000000
 hadoop-conf.io.compression.codecs=org.apache.hadoop.io.compress.GzipCodec,org.apache.hadoop.io.compress.DefaultCodec,com.hadoop.compression.lzo.LzoCodec,com.hadoop.compression.lzo.LzopCodec,org.apache.hadoop.io.compress.BZip2Codec
 hadoop-conf.mapred.compress.map.output=true
 hadoop-conf.mapred.map.output.compression.codec=com.hadoop.compression.lzo.LzoCodec
+hadoop-conf.mapreduce.task.classpath.user.precedence=true
 
 # TODO make sure to set your ugi
 hadoop-conf.hadoop.job.ugi=username,hadoop
